--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,10 +12,6 @@
     <script type="text/javascript" type="module" src="/js/script.js"></script>
 </head>
 <body x-data="initApp">
-    <script type="text/javascript">
-        
-    </script>
-    <!-- import ONNXRuntime Web from CDN -->
     <script type="module">
         import Alpine from 'https://cdn.jsdelivr.net/npm/alpinejs@3.13.0/+esm';
         import { env, pipeline } from 'https://cdn.jsdelivr.net/npm/@xenova/transformers@2.5.4';
@@ -34,10 +30,10 @@
         </div>
 
         <div class="content pure-g">
-            <div class="pure-u-1 pure-u-lg-1-2 bot-container">
+            <div class="pure-u-1 pure-u-md-3-8 bot-container">
                 <img src="https://images01.nicepage.com/a1389d7bc73adea1e1c1fb7e/2101f0b4d7fb507285c139ae/Untitled-3.png" alt="QA Bot image">
                 <div class="chat-container">
-                    <div class="pure-u-1 history">
+                    <div class="pure-u-1 history" id="history" x-init="$watch('messages', scroll)">
                     <ul class="chat">
                         <template x-for="message in messages">
                             <li class="message" x-bind:class="{'me': !message.isBot, 'bot': message.isBot}">
@@ -46,14 +42,22 @@
                         </template>
                     </ul>
                 </div>
-                    <!-- <input type="text" class="text_input" placeholder="Message..." /> -->
-                    <form class="pure-form pure-g">
-                        <textarea class="pure-input-1" rows="3" x-model="question"></textarea>
-                        <a class="send-button" @click="askQuestion()"></a>
+                    <form class="pure-form pure-g input-form">
+                        <div class="pure-u-11-12">
+                            <div id="wave" x-show="writting">
+                                <span class="dot one"></span>
+                                <span class="dot two"></span>
+                                <span class="dot three"></span>
+                            </div>
+                            <textarea class="pure-input-1" rows="3" x-model="question"></textarea>
+                        </div>
+                        <div class="pure-u-1-12">
+                            <a class="send-button" @click="askQuestion()"></a>
+                        </div>
                     </form>
                 </div>
             </div>
-            <div class="pure-u-1 pure-u-lg-1-2">
+            <div class="pure-u-1 pure-u-md-5-8 faq-container">
                 <template x-for="faq in faqs">
                     <details class="faq__detail">
                         <summary  class="faq__summary"><span class="faq__question" x-text="faq.question"></span></summary>
